monitoring/IngressRoute-prometheus-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-route
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prometheus.anderwerse.de`)
      services:
        - name: kube-prometheus-prometheus
          namespace: monitoring
          port: 8080
  tls:
    secretName: anderwersede-tls-certificate
